<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ji.bakingapp.MainActivity">

    <android.support.v7.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_recycler"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        tools:listitem="@layout/food_item" />

</android.support.constraint.ConstraintLayout>
